# grappa-mcp

./: .env.example  .gitignore  LICENSE  README.md  grappa-mcp.service.example  install-systemd.sh  pyproject.toml  server.py
.github/workflows/: ci.yml
tests/: conftest.py  test_auth.py  test_docker_tools.py  test_file_tools.py  test_jobs.py  test_run_command.py  test_search_files.py
