[project]
name = "grappa-mcp"
version = "0.1.0"
description = "FastMCP server providing remote shell, file, and Docker log tools over authenticated HTTP."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Victor Yakimov" }]
dependencies = [
    "fastmcp>=3.1.1",
    "uvicorn>=0.42.0",
]

[project.urls]
Homepage = "https://github.com/vyakimov/grappa-mcp"
Repository = "https://github.com/vyakimov/grappa-mcp"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
